Tue Nov 02 03:22:52 GMT 2004  Olly Betts <olly@survex.com>

	* backends/muscat36/: Removed unused test harness sources.

Tue Nov 02 02:44:34 GMT 2004  Olly Betts <olly@survex.com>

	* languages/pool.c,languages/pool.h: Removed unused sources.

Tue Nov 02 01:51:30 GMT 2004  Olly Betts <olly@survex.com>

	* configure.ac: AC_TYPE_SIZE_T causes problems with Compaq C++ when it
	  fails to spot size_t (which is there) and the "#define size_t
	  unsigned long" it adds to config.h breaks "using std::size_t;".
	  Also removed AC_C_CONST as I don't believe that's needed either
	  in a largely C++ library.  Both of these have been in configure.in
	  since the very first version so I suspect autoscan decided we wanted
	  them.

Mon Nov 01 05:44:02 GMT 2004  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc: Fixed compilation problem on alpha Linux.

Mon Nov 01 03:16:36 GMT 2004  Olly Betts <olly@survex.com>

	* api/omqueryinternal.cc,api/omstem.cc,
	  backends/inmemory/inmemory_database.h,
	  backends/multi/multi_termlist.h,backends/quartz/,
	  extra/queryparser.yy,matcher/,net/tcpserver.cc,tests/api_anydb.cc,
	  tests/api_db.cc,tests/quartztest.cc,testsuite/backendmanager.cc,
	  testsuite/btreecheck.cc,testsuite/testsuite.cc: Changed C style
	  casts to C++ style.  The syntax is ugly, but they do make the intent
	  clearer which is a good thing.

Mon Nov 01 02:56:31 GMT 2004  Olly Betts <olly@survex.com>

	* configure.ac: Select ANSI iostream implmentation for Compaq C++.

Mon Nov 01 02:41:58 GMT 2004  Olly Betts <olly@survex.com>

	* configure.ac: Compaq's C++ compiler doesn't know snprintf, yet their
	  C compiler does.  Let's try running *all* the configure checks with
	  the C++ compiler, since that's what we compile most code with.

Mon Nov 01 01:12:43 GMT 2004  Olly Betts <olly@survex.com>

	* common/netutils.cc: Fixed to compile.

Mon Nov 01 01:06:13 GMT 2004  Olly Betts <olly@survex.com>

	* common/Makefile.am,common/netutils.cc,common/netutils.h: