@@ -3,7 +3,7 @@
  * ----START-LICENCE----
  * Copyright 1999,2000,2001 BrightStation PLC
  * Copyright 2002 Ananova Ltd
- * Copyright 2002,2003 Olly Betts
+ * Copyright 2002,2003,2004 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -89,7 +89,7 @@ TradWeight::get_sumpart(Xapian::termcount wdf, Xapian::doclength len) const
     DEBUGCALL(MATCH, Xapian::weight, "TradWeight::get_sumpart", wdf << ", " << len);
     if (!weight_calculated) calc_termweight();
 
-    Xapian::weight wt = (double) wdf / (len * lenpart + wdf);
+    Xapian::weight wt = double(wdf) / (len * lenpart + wdf);
 
     wt *= termweight;
 
